# Robot-Navigation-Problem

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp
Docs/: Stats  info.tex  paper.sublime-project  paper.sublime-workspace  paper.tex  ref.bib  report.tex  unipaper.cls
Docs/Content/: acknowledgements.tex  appendix.tex  body.tex
Docs/Content/Sections/: conclusion.tex  features.tex  implementation.tex  introduction.tex  known_issues.tex  research.tex  search_algorithms.tex
Docs/Resources/: Stats  Tests.cpp  alltests.txt
Docs/Structure/: glossary.tex  preamble.tex
Source/: Main.cpp  VisualizerMain.cpp
Source/Containers/: Environment.cpp  Environment.hpp  Graph.cpp  Graph.hpp
Source/Parsers/: CLIParser.cpp  CLIParser.hpp  FileParser.cpp  FileParser.hpp
Source/Search/: Environment.cpp  Environment.hpp  SearchMethod.cpp  SearchMethod.hpp  Uninformed.cpp  Uninformed.hpp
Source/Search/Core/: Containers.hpp  Containers.inl  Environment.cpp  Environment.hpp  SearchMethod.cpp  SearchMethod.hpp  Types.hpp
Source/Search/Methods/: AStar.cpp  AStar.hpp  BreadthFirst.cpp  BreadthFirst.hpp  DepthFirst.cpp  DepthFirst.hpp  GreedyBestFirst.cpp  GreedyBestFirst.hpp  IDAStar.cpp  IDAStar.hpp  IDS.cpp  IDS.hpp  IterativeDeepeningSearch.cpp  IterativeDeepeningSearch.hpp
Source/Util/: PlatformConfig.hpp
Source/Visualizer/: App.cpp  App.hpp  Color.cpp  Color.hpp  Error.hpp  GraphicsDriver.cpp  GraphicsDriver.hpp  PathRenderer.cpp  PathRenderer.hpp  PathVisualizer.cpp  PathVisualizer.hpp  Text.cpp  Text.hpp  VisualizerApp.cpp  VisualizerApp.hpp  Window.cpp  Window.hpp
Tests/: Tests.cpp  UninformedTests.cpp  experiment.py  failure.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt
